--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
                 <div class="col">
                   <div id='header-text-name'>
-                      Anpei Chen (陈安沛)
+                      Jing Zeng (曾静)
                   </div>
                   <div id='header-text-email'>
                         anpei.chen (at) inf.ethz.ch
