--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@
                         </div>
                         <div>
                             <a href="https://small-zeng.github.io/EVPP">[Project page]</a>
-                            <a href="https://arxiv.org/abs/2203.09517">[Paper]</a>
-                            <a href="https://github.com/apchenstu/TensoRF">[Code]</a>
-                            <a href="TensoRF/review.pdf">[Review]</a>
+                            <a href="https://arxiv.org/pdf/2209.13159.pdf">[Paper]</a>
+                            <a href="">[Code]</a>
+                            <!-- <a href="TensoRF/review.pdf">[Review]</a>
                             <a href="TensoRF/rebuttal.pdf">[Rebuttal]</a>
-                            <a href="TensoRF/meta-review.pdf">[Meta-review]</a>
+                            <a href="TensoRF/meta-review.pdf">[Meta-review]</a> -->
                         </div>
                     </div>
                 </div>
