--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             Jing Zeng, Yanxu Li, Yunlong Ran, Shuo Li, Fei Gao, Lincheng Li, Shibo He, Jiming chen, Qi Ye
                         </div>
                         <div>
-                            <a href="https://small-zeng.github.io/EVPP">[Project page]</a>
+                            <a href="https://small-zeng.github.io/EVPP/">[Project page]</a>
                             <a href="https://arxiv.org/pdf/2209.13159.pdf">[Paper]</a>
                             <a href="">[Code]</a>
                             <!-- <a href="TensoRF/review.pdf">[Review]</a>
