--- a/EVPP/index.html
+++ b/EVPP/index.html
@@ -139,31 +139,30 @@
     <div class="section">
         <s2>Performance</s2>
         <hr>
-        <h2 class="grey-heading_nerf">
+        <!-- <h2 class="grey-heading_nerf">
                 Super Fast Convergence
-        </h2>
+        </h2> -->
        
 
 
         </br></br></br>
-        <s2> Concurrent works </s2>
+        <s2> Related works </s2>
         <hr>
         <!-- <div class="section"> -->
         <p class="paragraph-3 nerf_text">
-        Some concurrent works also focus on speeding up the training process or compact representation:</p>
+        Some related works also focus on autonomous implicit reconstruction:</p>
         <!-- <div class="container"> -->
          <ul>
-            <li style="text-align: left">Dense grid with a shallow MLP. <a href="https://sunset1995.github.io/dvgo/"> DVGO </a> </li>
-            <li style="text-align: left">Sparse grid — Plenoxels: Radiance Fields without Neural Networks. <a href="https://alexyu.net/plenoxels/"> Plenoxels </a> </li>
-            <li style="text-align: left">Hash — Instant Neural Graphics Primitives with a Multiresolution Hash Encoding. <a href="https://nvlabs.github.io/instant-ngp/"> iNGP </a> </li>
+            <li style="text-align: left">NeurAR: Neural Uncertainty for Autonomous 3D Reconstruction<a href="https://kingteeloki-ran.github.io/NeurAR/"> NeurAR </a> </li>
+            <!-- <li style="text-align: left">Sparse grid — Plenoxels: Radiance Fields without Neural Networks. <a href="https://alexyu.net/plenoxels/"> Plenoxels </a> </li>
+            <li style="text-align: left">Hash — Instant Neural Graphics Primitives with a Multiresolution Hash Encoding. <a href="https://nvlabs.github.io/instant-ngp/"> iNGP </a> </li> -->
          </ul>
-        <!-- </ul> -->
-    <!-- </div> -->
+
         
 
 
 
-        </br></br></br>
+        <!-- </br></br></br>
         <s2> Acknowledgements </s2>
         <hr>
         <p class="paragraph-3 nerf_text">
@@ -171,30 +170,18 @@
             Qiangeng Xu for providing some baseline results,
             and, Katja Schwarz and Michael Niemeyer for providing helpful video materials.
             This project was supported by NSF grant IIS-1764078 and gift money from VIVO.
-        </p>
-<!--    </div>-->
+        </p> -->
 
-<!--        </br></br>-->
-<!--        <s2>Arxiv</s2>-->
-<!--        <hr>-->
-<!--        <div>-->
-<!--            <div class="list-group">-->
-<!--                <a href="https://arxiv.org/abs/2103.15595"-->
-<!--                   class="list-group-item">-->
-<!--                    <img src="img/paper_thumbnail.png" style="width:100%; margin-right:-20px; margin-top:-10px;">-->
-<!--                </a>-->
-<!--            </div>-->
-<!--        </div>-->
 
         </br></br>
-<!--    <div class="section">-->
         <s2>Bibtex</s2>
         <hr>
         <div class="bibtexsection">
-            @INPROCEEDINGS{Chen2022ECCV,
-              author = {Anpei Chen and Zexiang Xu and Andreas Geiger and Jingyi Yu and Hao Su},
-              title = {TensoRF: Tensorial Radiance Fields},
-              booktitle = {European Conference on Computer Vision (ECCV)},
+            @INPROCEEDINGS{Arxiv2022,
+              author = {Jing Zeng, Yanxu Li, Yunlong Ran, Shuo Li, Fei Gao, Lincheng Li, 
+                        Shibo He, Jiming chen, Qi Ye},
+              title = {Efficient View Path Planning for Autonomous Implicit Reconstruction},
+              booktitle = {},
               year = {2022}
             }
         </div>
