--- a/index.html
+++ b/index.html
@@ -146,6 +146,33 @@
                     </div>
                 </div>
 
+                <div class='row vspace-top'>
+                  <div class="col-sm-3">
+                      <!-- <img width="100%" playsinline="" autoplay="" loop="" preload="" muted="">
+                          <source src="imgs/EVPP.mp4" type="video/mp4">
+                      </video> -->
+                      <img src="../imgs/MAGIC.png" style="width:100%; margin-right:0px; margin-top:0px;">
+                  </div>
+
+                  <div class="col">
+                      <div class='paper-title'>
+                          MAGIC: A Lightweight System for Localizing Multiple Devices Via A Single LoRa Gateway
+                      </div>
+                      <div class='paper-desc'>
+                        International Conference on Communications (ICC 2020)
+                      </div>
+                      <div class='paper-authors'>
+                        Huimin Chen, Jing Zeng, Shibo He, Zhiguo Shi, Jiming Chen, Zhen Tao
+                      </div>
+                      <div>
+                          <a href="">[Project page]</a>
+                          <a href="https://ieeexplore.ieee.org/abstract/document/9149280">[Paper]</a>
+                          <a href="">[Code]</a>
+                          
+                      </div>
+                  </div>
+              </div>
+
 
             </div>
         </div>
