--- a/EVPP/index.html
+++ b/EVPP/index.html
@@ -191,7 +191,7 @@
 
     <footer>
         <p>This website is partially borrowed from NeRF.
-            Send feedback and questions to <a href="https://apchenstu.github.io/">Anpei Chen</a></p>
+            Send feedback and questions to <a href="https://small-zeng.github.io/">Jing Zeng</a></p>
     </footer>
 </div>
 
@@ -209,7 +209,6 @@
 <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=51e0d73d83d06baa7a00000f" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script src="https://uploads-ssl.webflow.com/51e0d73d83d06baa7a00000f/js/webflow.fd6c33218.js" type="text/javascript"></script>
 
-<!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
 
 </body>
 </html>
