--- a/index.html
+++ b/index.html
@@ -149,6 +149,31 @@
 
                 <div class='row vspace-top'>
                   <div class="col-sm-3">
+                      <video width="100%" playsinline="" autoplay="" loop="" preload="" muted="">
+                          <source src="imgs/NeurAR.mp4" type="video/mp4">
+                      </video>
+                  </div>
+
+                  <div class="col">
+                      <div class='paper-title'>
+                           NeurAR: Neural Uncertainty for Autonomous 3D Reconstruction
+                      </div>
+                      <div class='paper-desc'>
+                     Arxiv 2022 (Under review)
+                      </div>
+                      <div class='paper-authors'>
+                          Yunlong Ran, Jing Zeng, Shibo He, Jiming Chen, Lincheng Li, Yingfeng Chen, Gim Hee Lee, Qi Ye
+                      </div>
+                      <div>
+                          <a href="https://kingteeloki-ran.github.io/NeurAR/">[Project page]</a>
+                          <a href="https://arxiv.org/pdf/2207.10985.pdf">[Paper]</a>
+                          <a href="https://github.com/PerPLe-ZJU/nerfplanning">[Code]</a>
+                      </div>
+                  </div>
+                </div>
+
+                <div class='row vspace-top'>
+                  <div class="col-sm-3">
                       <!-- <img width="100%" playsinline="" autoplay="" loop="" preload="" muted="">
                           <source src="imgs/EVPP.mp4" type="video/mp4">
                       </video> -->
