--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class='container'>
             <div class='row'>
                 <div class="col-sm-3 offset-sm-1">
-                    <!-- <img src='imgs/portrait.jpg' class='img-fluid'> -->
+                    <img src='imgs/zj.jpg' class='img-fluid'>
                 </div>
 
                 <div class="col">
@@ -102,14 +102,12 @@
             <div class='col offset-sm-1'>
                 <h1>Bio</h1>
                 <p>
-                    <!-- I'm an ELLIS Postdoc, joinly hosted by Prof. <a href="https://vlg.inf.ethz.ch/team/Prof-Dr-Siyu-Tang.html">Siyu Tang</a> (ETH Zürich) and Prof. <a href="http://www.cvlibs.net/">Andreas Geiger</a> (University of Tübingen). I obtained my Ph.D. at ShanghaiTech University <a href="http://vic.shanghaitech.edu.cn/">Visual Intelligent Center (VIC)</a>, working with
-                    Prof. <a href="http://www.yu-jingyi.com/cv/">Jingyi Yu</a>. Before that, I received my Bachelor degree in 2016 from Xidian University.
+                    I'm currently pursuing my PHD degree under the guidance of Prof <a href="https://person.zju.edu.cn/yeqi">Qi Ye</a> (Zhejiang University). Before that, 
+                    I received my Bachelor degree in 2019 from China University of Geosciences (Wuhan).
                     <br><br>
-                    My research interests lie at the intersection of computer graphics and vision,
-                    including geometric modeling/reconstruction, realistic appearance rendering, and controllable image synthesis.
-                    I have a great passion on new things and ideas, my goal is to create magic and happiness. Outside my research,
-                    I love photography, badminton, and movie appreciation.
-                    <br> -->
+                    My research interests lie at the computer vision and robot applications,
+                    including 3D reconstruction, view path planning and SLAM.
+                    <br>
 
                 </p>
 
