--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class='container'>
             <div class='row'>
                 <div class="col-sm-3 offset-sm-1">
-                    <img src='imgs/zj.jpg' class='img-fluid'>
+                    <img src='imgs/zj.jpg' class='img-fluid' style="width:50%; margin-right:0px; margin-top:0px;">
                 </div>
 
                 <div class="col">
