--- a/EVPP/index.html
+++ b/EVPP/index.html
@@ -37,7 +37,7 @@
         <a href="https://kingteeloki-ran.github.io/"> Yunlong Ran</a>,
         <a href="https://person.zju.edu.cn/shuoli"> Shuo Li</a>,
         <a href="https://scholar.google.com/citations?user=4RObDv0AAAAJ&hl=zh-CN&oi=sra"> Fei Gao</a>,
-        <a href="https://person.zju.edu.cn/shuoli"> Lincheng Li</a>,
+        <a href=""> Lincheng Li</a>,
         <a href="https://person.zju.edu.cn/shibohe"> Shibo He</a>,
         <a href="https://person.zju.edu.cn/en/jmchen"> Jiming chen</a>,
         <a href="https://person.zju.edu.cn/en/yeqi"> Qi Ye</a>
