--- a/EVPP/index.html
+++ b/EVPP/index.html
@@ -220,12 +220,12 @@
         <s2>Bibtex</s2>
         <hr>
         <div class="bibtexsection">
-            @INPROCEEDINGS{Arxiv2022,
-              author = {Jing Zeng, Yanxu Li, Yunlong Ran, Shuo Li, Fei Gao, Lincheng Li, 
-                        Shibo He, Jiming chen, Qi Ye},
-              title = {Efficient View Path Planning for Autonomous Implicit Reconstruction},
-              booktitle = {},
-              year = {2022}
+            @article{zeng2022efficient,
+            title={Efficient View Path Planning for Autonomous Implicit Reconstruction},
+            author={Zeng, Jing and Li, Yanxu and Ran, Yunlong and Li, Shuo and Gao, Fei and 
+                    Li, Lincheng and He, Shibo and Ye, Qi and others},
+            journal={arXiv preprint arXiv:2209.13159},
+            year={2022}
             }
         </div>
 <!--    </div>-->
