--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                   <div>
                     
                     <a href="https://github.com/small-zeng">[GitHub]</a>
-                    <a href="">[Google Scholar]</a>
-                    <!-- <a href="https://scholar.google.com/citations?user=fuR1FBwAAAAJ&hl=en">[Google Scholar]</a> -->
+                    <!-- <a href="">[Google Scholar]</a> -->
+                    <a href="https://scholar.google.com/citations?user=iXEo6DcAAAAJ&hl=zh-CN">[Google Scholar]</a>
                     <!-- <a href="docs/Anpei_CV.pdf">[Download CV]</a> -->
                   </div>
 
