--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                             Efficient View Path Planning for Autonomous Implicit Reconstruction
                         </div>
                         <div class='paper-desc'>
-			                 Arxiv 2022 (Under review)
+			                 ICRA 2023
                         </div>
                         <div class='paper-authors'>
                             Jing Zeng, Yanxu Li, Yunlong Ran, Shuo Li, Fei Gao, Lincheng Li, Shibo He, Jiming chen, Qi Ye
@@ -157,7 +157,7 @@
                            NeurAR: Neural Uncertainty for Autonomous 3D Reconstruction
                       </div>
                       <div class='paper-desc'>
-                     Arxiv 2022 (Under review)
+                     RAL 2022
                       </div>
                       <div class='paper-authors'>
                           Yunlong Ran, Jing Zeng, Shibo He, Jiming Chen, Lincheng Li, Yingfeng Chen, Gim Hee Lee, Qi Ye
