--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                             Efficient View Path Planning for Autonomous Implicit Reconstruction
                         </div>
                         <div class='paper-desc'>
-			                 ICRA 2023
+                          IEEE International Conference on Robotics and Automation (ICRA 2023)
                         </div>
                         <div class='paper-authors'>
                             Jing Zeng, Yanxu Li, Yunlong Ran, Shuo Li, Fei Gao, Lincheng Li, Shibo He, Jiming chen, Qi Ye
@@ -154,10 +154,10 @@
 
                   <div class="col">
                       <div class='paper-title'>
-                           NeurAR: Neural Uncertainty for Autonomous 3D Reconstruction
+                        NeurAR: Neural Uncertainty for Autonomous 3D Reconstruction with Implicit Neural Representations
                       </div>
                       <div class='paper-desc'>
-                     RAL 2022
+                        IEEE Robotics and Automation Letter (RA-L 2022)
                       </div>
                       <div class='paper-authors'>
                           Yunlong Ran, Jing Zeng, Shibo He, Jiming Chen, Lincheng Li, Yingfeng Chen, Gim Hee Lee, Qi Ye
