--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
 
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
-                        <video width="100%" playsinline="" autoplay="" loop="" preload="" muted="">
-                            <source src="imgs/EVPP.mp4" type="video/mp4">
+                        <video width="100%" playsinline="" autoplay="" loop="" preload="" muted=""  controlslist="nodownload">
+                            <source src="imgs/EVPP.mp4" type="video/mp4"> 
                         </video>
                     </div>
 
