--- a/EVPP/index.html
+++ b/EVPP/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 <head>
-    <meta charset="utf-8">
+    <!-- <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description"
@@ -11,7 +11,7 @@
                                 Zexiang Xu*,
                                 Andreas Geiger,
                                 Jingyi Yu,
-                                Hao Su">
+                                Hao Su"> -->
 
     <title>Efficient View Path Planning for Autonomous Implicit Reconstruction</title>
 
