--- a/EVPP/index.html
+++ b/EVPP/index.html
@@ -61,16 +61,18 @@
 <div class="container">
     <div class="w-container">
         <h2 class="grey-heading_nerf">Overview Video</h2>
-<!--    <div class="section">-->
-        <div class="vcontainer">
+        <video  controls="controls">
+            <source src="../imgs/EVPP.mp4" type="video/mp4">
+        </video>
+
+        <!-- <div class="vcontainer">
             <iframe class='video' src="../imgs/EVPP.mp4" frameborder="0"
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
-        </div>
+        </div> -->
 
     </div>
 
-<!--<hr>-->
     </br></br>
     <div data-anchor="slide1" class="section nerf_section">
         <div class="grey_container w-container">
