--- a/EVPP/index.html
+++ b/EVPP/index.html
@@ -2,16 +2,6 @@
 
 <html lang="en">
 <head>
-    <!-- <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description"
-          content="A novel approach that achieves photo-realistic rendering, fast reconstruction, and compact modeling.">
-    <meta name="author" content="Anpei Chen*,
-                                Zexiang Xu*,
-                                Andreas Geiger,
-                                Jingyi Yu,
-                                Hao Su"> -->
 
     <title>Efficient View Path Planning for Autonomous Implicit Reconstruction</title>
 
@@ -50,26 +40,18 @@
     <div class="btn-group" role="group" aria-label="Top menu">
         <a class="btn btn-primary" href="https://arxiv.org/pdf/2209.13159.pdf">Paper</a>
         <a class="btn btn-primary" href="">Code</a>
-        <!-- <a class="btn btn-primary" href="review.pdf">Review</a>
-        <a class="btn btn-primary" href="rebuttal.pdf">Rebuttal</a>
-        <a class="btn btn-primary" href="meta-review.pdf">Meta-review</a> -->
     </div>
 </div>
 
 
 
 <div class="container">
-    <div class="w-container">
-        <h2 class="grey-heading_nerf">Overview Video</h2>
-        <video  controls="controls">
-            <source src="../imgs/EVPP.mp4" type="video/mp4">
-        </video>
-
-        <!-- <div class="vcontainer">
-            <iframe class='video' src="../imgs/EVPP.mp4" frameborder="0"
-                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-        </div> -->
+        <div class="w-container">
+            <h2 class="grey-heading_nerf">Overview Video</h2>
+            <video controls="controls">
+                <source src="../imgs/EVPP.mp4" type="video/mp4">
+            </video>
+        </div>
 
     </div>
 
