--- a/EVPP/index.html
+++ b/EVPP/index.html
@@ -9,6 +9,21 @@
     <link href="offcanvas.css" rel="stylesheet">
         <link rel="icon" href="img/tensorf_logo.ico" type="image/x-ico">
 
+    <style>
+        .w-container {
+            width: 100%;
+            height: 0;
+            padding-bottom: 56.25%; /* 16:9 宽高比 */
+            position: relative;
+        }
+
+        .w-container video {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+        }
+    </style>
+
 
 
 </head>
