--- a/index.html
+++ b/index.html
@@ -117,6 +117,32 @@
 
                 <!-- <p> * denotes equal contribution</p> -->
 
+
+                <div class='row vspace-top'>
+                  <div class="col-sm-3">
+                      <video width="100%" playsinline="" autoplay="" loop="" preload="" muted=""  controlslist="nodownload">
+                          <source src="imgs/AIISRFE.mp4" type="video/mp4"> 
+                      </video>
+                  </div>
+
+                  <div class="col">
+                      <div class='paper-title'>
+                        Autonomous Implicit Indoor Scene Reconstruction with Frontier Exploration
+                      </div>
+                      <div class='paper-desc'>
+                        ICRA 2024 submission
+                      </div>
+                      <div class='paper-authors'>
+                        Jing Zeng†, Yanxu Li†, Jiahao Sun†, Yunlong Ran, Jiming Chen, Qi Ye
+                      </div>
+                      <div>
+                          <a href="https://small-zeng.github.io/AIISRFE/">[Project page]</a>
+                          <!-- <a href="https://arxiv.org/pdf/2209.13159.pdf">[Paper]</a> -->
+                          <!-- <a href="">[Code]</a> -->
+                      </div>
+                  </div>
+                </div>
+
                 <div class='row vspace-top'>
                     <div class="col-sm-3">
                         <video width="100%" playsinline="" autoplay="" loop="" preload="" muted=""  controlslist="nodownload">
@@ -138,9 +164,6 @@
                             <a href="https://small-zeng.github.io/EVPP/">[Project page]</a>
                             <a href="https://arxiv.org/pdf/2209.13159.pdf">[Paper]</a>
                             <a href="">[Code]</a>
-                            <!-- <a href="TensoRF/review.pdf">[Review]</a>
-                            <a href="TensoRF/rebuttal.pdf">[Rebuttal]</a>
-                            <a href="TensoRF/meta-review.pdf">[Meta-review]</a> -->
                         </div>
                     </div>
                 </div>
