--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
             <div class='col offset-sm-1'>
                 <h1>Bio</h1>
                 <p>
-                    I'm currently pursuing my PHD degree under the guidance of Prof <a href="https://person.zju.edu.cn/yeqi">Qi Ye</a> (Zhejiang University). Before that, 
+                    I'm currently pursuing my PHD degree under the guidance of Prof <a href="https://person.zju.edu.cn/yeqi">Qi Ye</a> 
+                    , <a href="https://person.zju.edu.cn/shibohe">Shibo He</a> and <a href="https://person.zju.edu.cn/en/jmchen">Jiming Chen</a> (Zhejiang University). Before that, 
                     I received my Bachelor degree in 2019 from China University of Geosciences (Wuhan).
                     <br><br>
                     My research interests lie at the computer vision and robot applications,
