--- a/EVPP/index.html
+++ b/EVPP/index.html
@@ -54,7 +54,7 @@
     </br></br>
     <div class="btn-group" role="group" aria-label="Top menu">
         <a class="btn btn-primary" href="https://arxiv.org/pdf/2209.13159.pdf">Paper</a>
-        <a class="btn btn-primary" href="">Code</a>
+        <a class="btn btn-primary" href="https://github.com/small-zeng/EVPP">Code</a>
     </div>
 </div>
 
