--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                         <div>
                             <a href="https://small-zeng.github.io/EVPP/">[Project page]</a>
                             <a href="https://arxiv.org/pdf/2209.13159.pdf">[Paper]</a>
-                            <a href="">[Code]</a>
+                            <a href="https://github.com/small-zeng/EVPP">[Code]</a>
                         </div>
                     </div>
                 </div>
