--- a/EVPP/index.html
+++ b/EVPP/index.html
@@ -53,7 +53,7 @@
 
     </br></br>
     <div class="btn-group" role="group" aria-label="Top menu">
-        <a class="btn btn-primary" href="https://arxiv.org/pdf/2209.13159.pdf">Paper</a>
+        <a class="btn btn-primary" href="https://ieeexplore.ieee.org/abstract/document/10160793">Paper</a>
         <a class="btn btn-primary" href="https://github.com/small-zeng/EVPP">Code</a>
     </div>
 </div>
@@ -208,13 +208,14 @@
         <s2>Bibtex</s2>
         <hr>
         <div class="bibtexsection">
-            @article{zeng2022efficient,
-            title={Efficient View Path Planning for Autonomous Implicit Reconstruction},
-            author={Zeng, Jing and Li, Yanxu and Ran, Yunlong and Li, Shuo and Gao, Fei and 
-                    Li, Lincheng and He, Shibo and Ye, Qi and others},
-            journal={arXiv preprint arXiv:2209.13159},
-            year={2022}
-            }
+            @inproceedings{zeng2023efficient,
+                title={Efficient view path planning for autonomous implicit reconstruction},
+                author={Zeng, Jing and Li, Yanxu and Ran, Yunlong and Li, Shuo and Gao, Fei and Li, Lincheng and He, Shibo and Chen, Jiming and Ye, Qi},
+                booktitle={2023 IEEE International Conference on Robotics and Automation (ICRA)},
+                pages={4063--4069},
+                year={2023},
+                organization={IEEE}
+              }
         </div>
 <!--    </div>-->
     </div>
