--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                         </div>
                         <div>
                             <a href="https://small-zeng.github.io/EVPP/">[Project page]</a>
-                            <a href="https://arxiv.org/pdf/2209.13159.pdf">[Paper]</a>
+                            <a href="https://ieeexplore.ieee.org/abstract/document/10160793">[Paper]</a>
                             <a href="https://github.com/small-zeng/EVPP">[Code]</a>
                         </div>
                     </div>
