--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         Autonomous Implicit Indoor Scene Reconstruction with Frontier Exploration
                       </div>
                       <div class='paper-desc'>
-                        ICRA 2024 submission
+                        IEEE International Conference on Robotics and Automation (ICRA 2024)
                       </div>
                       <div class='paper-authors'>
                         Jing Zeng†, Yanxu Li†, Jiahao Sun†, Yunlong Ran, Jiming Chen, Qi Ye
