--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                       </div>
                       <div>
                           <a href="https://small-zeng.github.io/AIISRFE/">[Project page]</a>
-                          <!-- <a href="https://arxiv.org/pdf/2209.13159.pdf">[Paper]</a> -->
+                          <a href="https://arxiv.org/abs/2404.10218">[Paper]</a>
                           <!-- <a href="">[Code]</a> -->
                       </div>
                   </div>
