--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                         IEEE International Conference on Robotics and Automation (ICRA 2024)
                       </div>
                       <div class='paper-authors'>
-                        Jing Zeng†, Yanxu Li†, Jiahao Sun†, Yunlong Ran, Jiming Chen, Qi Ye
+                        <strong>Jing Zeng</strong>†, Yanxu Li†, Jiahao Sun†, Yunlong Ran, Jiming Chen, Qi Ye
                       </div>
                       <div>
                           <a href="https://small-zeng.github.io/AIISRFE/">[Project page]</a>
@@ -159,7 +159,7 @@
                           IEEE International Conference on Robotics and Automation (ICRA 2023)
                         </div>
                         <div class='paper-authors'>
-                            Jing Zeng, Yanxu Li, Yunlong Ran, Shuo Li, Fei Gao, Lincheng Li, Shibo He, Jiming chen, Qi Ye
+                          <strong>Jing Zeng</strong>, Yanxu Li, Yunlong Ran, Shuo Li, Fei Gao, Lincheng Li, Shibo He, Jiming chen, Qi Ye
                         </div>
                         <div>
                             <a href="https://small-zeng.github.io/EVPP/">[Project page]</a>
@@ -184,7 +184,7 @@
                         IEEE Robotics and Automation Letter (RA-L 2022)
                       </div>
                       <div class='paper-authors'>
-                          Yunlong Ran, Jing Zeng, Shibo He, Jiming Chen, Lincheng Li, Yingfeng Chen, Gim Hee Lee, Qi Ye
+                          Yunlong Ran, <strong>Jing Zeng</strong>, Shibo He, Jiming Chen, Lincheng Li, Yingfeng Chen, Gim Hee Lee, Qi Ye
                       </div>
                       <div>
                           <a href="https://kingteeloki-ran.github.io/NeurAR/">[Project page]</a>
@@ -210,7 +210,7 @@
                         International Conference on Communications (ICC 2020)
                       </div>
                       <div class='paper-authors'>
-                        Huimin Chen, Jing Zeng, Shibo He, Zhiguo Shi, Jiming Chen, Zhen Tao
+                        Huimin Chen, <strong>Jing Zeng</strong>, Shibo He, Zhiguo Shi, Jiming Chen, Zhen Tao
                       </div>
                       <div>
                           <a href="">[Project page]</a>
