--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                         <div>
                             <a href="https://small-zeng.github.io/EVPP/">[Project page]</a>
                             <a href="https://ieeexplore.ieee.org/abstract/document/10160793">[Paper]</a>
-                            <!-- <a href="https://github.com/small-zeng/EVPP">[Code]</a> -->
+                            <a href="https://github.com/small-zeng/EVPP">[Code]</a>
                         </div>
                     </div>
                 </div>
