--- a/EVPP/index.html
+++ b/EVPP/index.html
@@ -68,21 +68,14 @@
     </div>
 </div> -->
 
-<!-- <div class="container">
-    <div class="w-container">
-        <h2 class="grey-heading_nerf">Overview Video</h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/watch?v=pZfZmH5qxMk" frameborder="0" allowfullscreen></iframe>
-    </div>
-</div> -->
 
 <div class="container">
     <div class="w-container">
         <h2 class="grey-heading_nerf">Overview Video</h2>
-        <video controls="controls">
-            <source src="https://www.youtube.com/watch?v=pZfZmH5qxMk" type="video/mp4">
-        </video>
+        <iframe width="720" height="480" src="https://www.youtube.com/embed/pZfZmH5qxMk" frameborder="0" allowfullscreen></iframe>
     </div>
 </div>
+
 
 
 
