--- a/AIISRFE/index.html
+++ b/AIISRFE/index.html
@@ -52,9 +52,11 @@
 
     </br></br>
     <div class="btn-group" role="group" aria-label="Top menu">
-        <!-- <a class="btn btn-primary" href="https://arxiv.org/pdf/2209.13159.pdf">Paper</a> -->
-        <!-- <a class="btn btn-primary" href="">Code</a> -->
+        <a class="btn btn-primary" href="https://arxiv.org/abs/2404.10218.pdf">Paper</a>
+        &nbsp; &nbsp;
+        <a class="btn btn-primary" href="">Code coming soon</a>
     </div>
+    
 </div>
 
 
