--- a/EVPP/index.html
+++ b/EVPP/index.html
@@ -53,6 +53,7 @@
     </br></br>
     <div class="btn-group" role="group" aria-label="Top menu">
         <a class="btn btn-primary" href="https://ieeexplore.ieee.org/abstract/document/10160793">Paper</a>
+        &nbsp; &nbsp;
         <a class="btn btn-primary" href="https://github.com/small-zeng/EVPP">Code</a>
     </div>
 </div>
