--- a/AIISRFE/index.html
+++ b/AIISRFE/index.html
@@ -54,7 +54,7 @@
     <div class="btn-group" role="group" aria-label="Top menu">
         <a class="btn btn-primary" href="https://arxiv.org/abs/2404.10218.pdf">Paper</a>
         &nbsp; &nbsp;
-        <a class="btn btn-primary" href="">Code coming soon</a>
+        <a class="btn btn-primary" href="https://github.com/small-zeng/AIISFR">Code coming soon</a>
     </div>
     
 </div>
