--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                       <div>
                           <a href="https://small-zeng.github.io/AIISRFE/">[Project page]</a>
                           <a href="https://arxiv.org/abs/2404.10218">[Paper]</a>
-                          <a href="https://github.com/small-zeng/AIISFR">[Code coming soon]</a>
+                          <a href="https://github.com/small-zeng/AIISFRE">[Code coming soon]</a>
                       </div>
                   </div>
                 </div>
