--- a/AIISRFE/index.html
+++ b/AIISRFE/index.html
@@ -73,6 +73,17 @@
 <br><br><br><br><br><br>
 
 
+<s2>Bibtex</s2>
+<hr>
+<div class="bibtexsection">
+    @article{zeng2024autonomous,
+        title={Autonomous Implicit Indoor Scene Reconstruction with Frontier Exploration},
+        author={Zeng, Jing and Li, Yanxu and Sun, Jiahao and Ye, Qi and Ran, Yunlong and Chen, Jiming},
+        journal={arXiv preprint arXiv:2404.10218},
+        year={2024}
+      }
+</div>
+
     <footer>
         <p>This website is partially borrowed from NeRF.
             Send feedback and questions to <a href="https://small-zeng.github.io/">Jing Zeng</a></p>
