--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     I received my Bachelor degree in 2019 from China University of Geosciences (Wuhan).
                     <br><br>
                     My research interests lie at the computer vision and robot applications,
-                    including 3D reconstruction, view path planning and SLAM.
+                    including online 3D reconstruction (NeRF / 3DGS), view path planning (Single / Multi Robots) and VLM based Open-Vocabulary 3D Scene Segmentation.
                     <br>
 
                 </p>
