--- a/index.html
+++ b/index.html
@@ -107,7 +107,13 @@
                     I received my Bachelor degree in 2019 from China University of Geosciences (Wuhan).
                     <br><br>
                     My research interests lie at the computer vision and robot applications,
-                    including online 3D Reconstruction (NeRF / 3DGS), View Path Planning (Single / Multi Robots) and VLM based Open-Vocabulary 3D Scene Segmentation.
+                    including: 
+                    <br>
+                    Online 3D Reconstruction (NeRF / 3DGS)
+                    <br>
+                    View Path Planning (Single / Multi Robots) 
+                    <br>
+                    VLM based Open-Vocabulary 3D Scene Understanding
                     <br>
 
                 </p>
