--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
           .paper-authors {
             font-style: italic;
           }
+          
     </style>
 </head>
 
@@ -109,11 +110,14 @@
                     My research interests lie at the computer vision and robot applications,
                     including: 
                     <br>
-                    Online 3D Reconstruction (NeRF / 3DGS)
+                    (1) Online 3D Reconstruction (NeRF / 3DGS).
                     <br>
-                    View Path Planning (Single / Multi Robots) 
+                    (2) View Path Planning (Single / Multi Robots).
                     <br>
-                    VLM based Open-Vocabulary 3D Scene Understanding
+                    (3) VLM based Open-Vocabulary 3D Scene Understanding.
+                    <br>
+
+
                     <br>
 
                 </p>
