--- a/index.html
+++ b/index.html
@@ -101,26 +101,33 @@
     <div class='container'>
         <div class='row vspace-top'>
             <div class='col offset-sm-1'>
-                <h1>Bio</h1>
+                <h1>About me</h1>
                 <p>
-                    I'm currently pursuing my PhD degree under the guidance of Prof <a href="https://person.zju.edu.cn/yeqi">Qi Ye</a> 
-                    , <a href="https://person.zju.edu.cn/shibohe">Shibo He</a> and <a href="https://person.zju.edu.cn/en/jmchen">Jiming Chen</a> (Zhejiang University). Before that, 
-                    I received my Bachelor degree in 2019 from China University of Geosciences (Wuhan).
-                    <br><br>
-                    My research interests lie at the computer vision and robot applications,
-                    including: 
+                I'm currently pursuing my PhD degree under the guidance of Prof <a href="https://person.zju.edu.cn/yeqi">Qi Ye</a> 
+                , <a href="https://person.zju.edu.cn/shibohe">Shibo He</a> and <a href="https://person.zju.edu.cn/en/jmchen">Jiming Chen</a> (Zhejiang University). Before that, 
+                I received my Bachelor degree in 2019 from China University of Geosciences (Wuhan).
+                </p>
+                <br><br>
+
+                <h1>Education</h1>
+                <p>
+                2019.09 - Present  Ph.D. College of Control Science and Engineering, Zhejiang University
+                <br>
+                2015.09 - 2019.06  B.S. School of Automation, China University of Geosciences (Wuhan)
+                </p>
+                <br><br>
+
+                <h1>Research</h1>
+                <p>
+                    My research interests lie at the computer vision and robot applications, including: 
                     <br>
                     (1) Online 3D Reconstruction (NeRF / 3DGS).
                     <br>
                     (2) View Path Planning (Single / Multi Robots).
                     <br>
                     (3) VLM based Open-Vocabulary 3D Scene Understanding.
-                    <br>
-
-
-                    <br>
-
                 </p>
+                <br><br>
 
                 <div class='vspace-top'>
                     <h1>Publications</h1>
