--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
                 <h1>Research</h1>
                 <p>
-                    My research interests lie at the computer vision and robot applications, including: 
+                    My research interests lie at the the autonomous 3D reconstruction of scenes, including: 
                     <br>
                     (1) Online 3D Reconstruction (NeRF / 3DGS).
                     <br>
