--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <br>
                     (1) Online 3D Reconstruction (NeRF / 3DGS).
                     <br>
-                    (2) View Path Planning (Single / Multi Robots).
+                    (2) View Path Planning (Single / Multiple Robots).
                     <br>
                     (3) VLM based Open-Vocabulary 3D Scene Understanding.
                 </p>
