--- a/index.html
+++ b/index.html
@@ -134,6 +134,30 @@
 
                 <!-- <p> * denotes equal contribution</p> -->
 
+                <div class='row vspace-top'>
+                  <div class="col-sm-3">
+                      <video width="100%" playsinline="" autoplay="" loop="" preload="" muted=""  controlslist="nodownload">
+                          <source src="imgs/MRGS.mp4" type="video/mp4"> 
+                      </video>
+                  </div>
+
+                  <div class="col">
+                      <div class='paper-title'>
+                        Multi-robot autonomous 3D reconstruction using Gaussian splatting with Semantic guidance
+                      </div>
+                      <div class='paper-desc'>
+                        Under review
+                      </div>
+                      <div class='paper-authors'>
+                        <strong>Jing Zeng</strong>†, Qi Ye*, Tianle Liu, Yang Xu, Jin Li, Jinming Xu, Liang Li, Jiming Chen
+                      </div>
+                      <div>
+                          <a href="">[Project page]</a>
+                          <a href="">[Paper]</a>
+                          <a href="">[Code]</a>
+                      </div>
+                  </div>
+                </div>
 
                 <div class='row vspace-top'>
                   <div class="col-sm-3">
