--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         Under review
                       </div>
                       <div class='paper-authors'>
-                        <strong>Jing Zeng</strong>†, Qi Ye*, Tianle Liu, Yang Xu, Jin Li, Jinming Xu, Liang Li, Jiming Chen
+                        <strong>Jing Zeng</strong>, Qi Ye*, Tianle Liu, Yang Xu, Jin Li, Jinming Xu, Liang Li, Jiming Chen
                       </div>
                       <div>
                           <a href="">[Project page]</a>
