--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                         <strong>Jing Zeng</strong>, Qi Ye*, Tianle Liu, Yang Xu, Jin Li, Jinming Xu, Liang Li, Jiming Chen
                       </div>
                       <div>
-                          <a href="">[Project page]</a>
+                          <a href="https://small-zeng.github.io/MRGS/">[Project page]</a>
                           <a href="">[Paper]</a>
                           <a href="">[Code]</a>
                       </div>
