--- a/MRGS/index.html
+++ b/MRGS/index.html
@@ -54,7 +54,7 @@
 
     </br></br>
     <div class="btn-group" role="group" aria-label="Top menu">
-        <a class="btn btn-primary" href="">Paper</a>
+        <a class="btn btn-primary" href="https://arxiv.org/abs/2412.02249">Paper</a>
         &nbsp; &nbsp;
         <a class="btn btn-primary" href="">Code</a>
     </div>
