--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                       </div>
                       <div>
                           <a href="https://small-zeng.github.io/MRGS/">[Project page]</a>
-                          <a href="">[Paper]</a>
+                          <a href="https://arxiv.org/abs/2412.02249">[Paper]</a>
                           <a href="">[Code]</a>
                       </div>
                   </div>
