--- a/AIISRFE/index.html
+++ b/AIISRFE/index.html
@@ -52,7 +52,7 @@
 
     </br></br>
     <div class="btn-group" role="group" aria-label="Top menu">
-        <a class="btn btn-primary" href="https://arxiv.org/abs/2404.10218.pdf">Paper</a>
+        <a class="btn btn-primary" href="https://ieeexplore.ieee.org/document/10611382">Paper</a>
         &nbsp; &nbsp;
         <a class="btn btn-primary" href="https://github.com/small-zeng/AIISRFE">Code</a>
     </div>
