--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                       </div>
                       <div>
                           <a href="https://small-zeng.github.io/AIISRFE/">[Project page]</a>
-                          <a href="https://arxiv.org/abs/2404.10218">[Paper]</a>
+                          <a href="https://ieeexplore.ieee.org/document/10611382">[Paper]</a>
                           <a href="https://github.com/small-zeng/AIISRFE">[Code]</a>
                       </div>
                   </div>
