--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
 
                   <div class="col">
                       <div class='paper-title'>
-                        Multi-robot autonomous 3D reconstruction using Gaussian splatting with Semantic guidance
+                        Multi-robot Autonomous 3D Reconstruction using Gaussian Splatting with Semantic Guidance
                       </div>
                       <div class='paper-desc'>
-                        Under review
+                        IEEE Robotics and Automation Letter (RA-L 2025)
                       </div>
                       <div class='paper-authors'>
                         <strong>Jing Zeng</strong>, Qi Ye*, Tianle Liu, Yang Xu, Jin Li, Jinming Xu, Liang Li, Jiming Chen
@@ -221,7 +221,7 @@
                         NeurAR: Neural Uncertainty for Autonomous 3D Reconstruction with Implicit Neural Representations
                       </div>
                       <div class='paper-desc'>
-                        IEEE Robotics and Automation Letter (RA-L 2022)
+                        IEEE Robotics and Automation Letter (RA-L 2023)
                       </div>
                       <div class='paper-authors'>
                           Yunlong Ran, <strong>Jing Zeng</strong>, Shibo He, Jiming Chen, Lincheng Li, Yingfeng Chen, Gim Hee Lee, Qi Ye
